Stop using small-caps
Roboto Slab doesn't have them, and CSS faking it looks bad.

--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,6 @@ html {
 
 #site-header {
   font-family: 'Roboto Slab', serif;
-  font-variant: small-caps;
   font-size: 1.5rem;
 
   display: flex;
